feat: Implement Create Investor page and related functionality
- Added CreateInvestor component for adding new customers with KYC verification.
- Integrated form validation rules for input fields in CreateInvestor.
- Created Investors page to display a list of customers with KYC status and actions.
- Implemented ViewInvestor page to view detailed information about a specific investor.
- Updated routes to include new investor management features.
- Removed obsolete CreatePO and PurchaseOrders pages.
- Enhanced sidebar and topbar components to accommodate new navigation options.
- Updated API calls to handle new investor-related endpoints.
- Improved modal and notification handling for success and error messages.
- Refactored form rules for better reusability across components.

--- a/package.json
+++ b/package.json
@@ -12,10 +12,12 @@
   "dependencies": {
     "@ant-design/v5-patch-for-react-19": "^1.0.3",
     "@fontsource/source-sans-pro": "^5.2.5",
+    "@lottiefiles/dotlottie-react": "^0.17.6",
     "@reduxjs/toolkit": "^2.9.0",
     "@tailwindcss/vite": "^4.1.14",
     "antd": "^5.27.4",
     "axios": "^1.12.2",
+    "clsx": "^2.1.1",
     "path-to-regexp": "^8.3.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
