--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-redux": "^9.2.0",
     "react-responsive": "^10.0.1",
     "react-router-dom": "^7.9.4",
+    "recharts": "^3.3.0",
     "redux-persist": "^6.0.0",
     "tailwindcss": "^4.1.14"
   },
