--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "antd": "^5.27.4",
     "axios": "^1.12.2",
     "clsx": "^2.1.1",
+    "dompurify": "^3.3.1",
     "path-to-regexp": "^8.3.0",
+    "rc-virtual-list": "^3.19.2",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-icons": "^5.5.0",
